--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^7.1.3",
     "react-scripts": "2.1.8",
-    "react-weathericons": "^1.0.4"
+    "react-weathericons": "^1.0.4",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
