--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "2.1.8",
     "react-weathericons": "^1.0.4",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "react-window": "1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
